--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,6 +24,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/dom": "^5.2.1",
     "@testing-library/react": "^8.0.1",
     "jest-dom": "^3.5.0"
   }
